# py-google-translator-service

./: Dockerfile  docker-compose.yaml  pyproject.toml
py-google-translator/: main.py
